# anyquote

./: README.md  pyproject.toml  start.py
anyquote/: __init__.py
anyquote/internet/: __init__.py  twi.py
anyquote/rander/: __init__.py  img.py  text.py
src/: main.py
src/rander/: text.py
tests/: test.py
