[tool.poetry]
name = "twi_quote"
version = "0.1.0"
description = ""
authors = ["hsn <hsn1919810@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"

pillow = "^10.4.0"
requests = "^2.32.3"
fonttools = "^4.53.1"
qrcode = "^7.4.2"
twitter-api-client = "^0.10.22"
python-telegram-bot = "^21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
